# axum

./: .env  .gitmodules  Cargo.toml  README.md  backend.long-type-13927788218515918643.txt  backend.long-type-5206709415119120296.txt  build.rs  diesel.toml
.cargo/: config.toml
src/: main.rs  schema.rs
src/middleware/: error.rs
src/model/: api_response.rs  mod.rs  user.rs
src/router/: auth.rs  common.rs  mod.rs  user.rs
src/utils/: auth2.rs  db.rs  env.rs  mod.rs  password.rs  validator.rs
test/: test.http
web/: package.json
web/src/app/: globals.scss  layout.tsx
webbak/: pnpm-lock.yaml
webbak/src/components/BaseLayout/: index.module.scss  index.tsx
