[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5", features = ["std"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde", "std", "now"] }
# sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "macros", "chrono" ] }
