[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
argon2 = { version = "0.5", features = ["std"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde", "std", "now"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = "1.18.1"
oauth2 = { version = "5.0.0", features = ["reqwest", "rustls-tls"] }
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json"] }
# sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "macros", "chrono" ] }
