[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
lazy_static = "1.5.0"
axum = "0.8.6"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
argon2 = { version = "0.5", features = ["std"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde", "std", "now"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = "1.18.1"
oauth2 = { version = "5.0.0", features = ["reqwest", "rustls-tls"] }
async-trait = "0.1.89"
reqwest = { version = "0.12.24", features = ["json"] }
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
redis = "0.32.7"

[profile.release]
debug = true

# [[bench]]
# name = "find"
# harness = false